@@ -4,6 +4,10 @@ parts = interpreter test
 extends = http://grok.zope.org/releaseinfo/grok-1.0b1.cfg
 versions = versions
 
+[versions]
+martian = 0.12
+grokcore.component = 
+
 [interpreter]
 recipe = zc.recipe.egg
 eggs = grokcore.component
